[gd_scene load_steps=6 format=2]

[ext_resource path="res://HUD/sprites/hunger_icon.png" type="Texture" id=1]
[ext_resource path="res://HUD/sprites/health_icon.png" type="Texture" id=2]
[ext_resource path="res://ant/sprites/ant_icon.png" type="Texture" id=3]
[ext_resource path="res://HUD/sprites/time_icon.png" type="Texture" id=4]
[ext_resource path="res://HUD/scripts/AntPanel.gd" type="Script" id=5]

[node name="AntPanel" type="HBoxContainer"]
margin_right = 200.0
margin_bottom = 45.0
rect_min_size = Vector2( 200, 0 )
mouse_filter = 0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="CenterContainer" parent="."]
margin_right = 32.0
margin_bottom = 50.0
rect_min_size = Vector2( 32, 48 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="Icon"]
margin_top = 9.0
margin_right = 32.0
margin_bottom = 41.0
rect_min_size = Vector2( 32, 32 )

[node name="Sprite" type="Sprite" parent="Icon/PanelContainer"]
self_modulate = Color( 0, 0, 0, 1 )
rotation = -0.785398
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 3 )
centered = false
offset = Vector2( -16, 8 )

[node name="Collapsed" type="PanelContainer" parent="."]
margin_left = 36.0
margin_right = 228.0
margin_bottom = 50.0
rect_min_size = Vector2( 192, 48 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Collapsed"]
margin_left = 7.0
margin_top = 7.0
margin_right = 185.0
margin_bottom = 43.0

[node name="MainLabel" type="RichTextLabel" parent="Collapsed/VBoxContainer"]
margin_right = 178.0
margin_bottom = 16.0
rect_min_size = Vector2( 0, 16 )
bbcode_text = "ant#12: Collector"
text = "ant#12: Collector"

[node name="Stats" type="HBoxContainer" parent="Collapsed/VBoxContainer"]
margin_top = 20.0
margin_right = 178.0
margin_bottom = 36.0

[node name="AgeIcon" type="PanelContainer" parent="Collapsed/VBoxContainer/Stats"]
margin_right = 16.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )

[node name="Sprite" type="Sprite" parent="Collapsed/VBoxContainer/Stats/AgeIcon"]
texture = ExtResource( 4 )
centered = false

[node name="AgeText" type="RichTextLabel" parent="Collapsed/VBoxContainer/Stats"]
margin_left = 20.0
margin_right = 52.0
margin_bottom = 16.0
rect_min_size = Vector2( 32, 0 )
text = "15.1"
scroll_active = false

[node name="HungerIcon" type="PanelContainer" parent="Collapsed/VBoxContainer/Stats"]
margin_left = 56.0
margin_right = 72.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )

[node name="Sprite" type="Sprite" parent="Collapsed/VBoxContainer/Stats/HungerIcon"]
texture = ExtResource( 1 )
centered = false

[node name="HungerText" type="RichTextLabel" parent="Collapsed/VBoxContainer/Stats"]
margin_left = 76.0
margin_right = 108.0
margin_bottom = 16.0
rect_min_size = Vector2( 32, 0 )
text = "82%"
scroll_active = false

[node name="HealthIcon" type="PanelContainer" parent="Collapsed/VBoxContainer/Stats"]
margin_left = 112.0
margin_right = 128.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )

[node name="Sprite" type="Sprite" parent="Collapsed/VBoxContainer/Stats/HealthIcon"]
self_modulate = Color( 0.905882, 0.254902, 0.317647, 1 )
texture = ExtResource( 2 )
centered = false

[node name="HealthText" type="RichTextLabel" parent="Collapsed/VBoxContainer/Stats"]
margin_left = 132.0
margin_right = 164.0
margin_bottom = 16.0
rect_min_size = Vector2( 32, 0 )
text = "92%"
scroll_active = false
